# genai

./: .env.example  .gitignore  CHANGELOG.md  COMPLETE_RUNNING_GUIDE.md  CONTRIBUTING.md  DETAILED_APPS.md  HOW_TO_RUN.md  LICENSE  README.md  SATISFACTION_ENHANCEMENT.md  SYSTEM_SUMMARY.md  age.bat  app_prompts.py  calculator.bat  demo.py  demo_auto_debugger.py  generate.py  grades.bat  main_enhanced.py  main_with_editor.py  pyproject.toml  quick_test.py  quiz.bat  run_demo.py  test_auto_debugger.py  test_gemini.py  test_interactive_editor.py  test_models.py  test_modern_generation.py  test_satisfaction.py  todo.bat
agent/: auto_debugger.py  graph.py  interactive_editor.py  prompts.py  tools.py
generated_projects/generated_projects_1/: index.html  script.js  style.css
generated_projects/generated_projects_1/generated_project/: index.html  script.js  style.css
generated_projects/generated_projects_2/: index.html  script.js  style.css
generated_projects/generated_projects_3/: index.html  script.js  style.css
